# ts4100-environ-dc

./: .gitmodules  Makefile.am  README.md  configure.ac
buildroot/: Makefile
buildroot/technologic/: Config.in  external.desc  external.mk
buildroot/technologic/board/ts4100-environ/: S35loadwifilcdmodules  S37startenviron  imx6ul-ts4100.dts  interfaces  post-build.sh  tsimx6ul_defconfig-kernel-fragment  tsinit.source  wpa_supplicant.conf
buildroot/technologic/configs/: ts4100_environ_defconfig
buildroot/technologic/package/ts-pixel-font/: Config.in  ts-pixel-font.hash  ts-pixel-font.mk
buildroot/technologic/package/ts4100-environ/: Config.in  ts4100-environ.mk
kicad_pcb/: .gitignore  fp-lib-table  sym-lib-table  ts4100-environ-station-DC-cache.lib  ts4100-environ-station-DC.dcm  ts4100-environ-station-DC.kicad_pcb  ts4100-environ-station-DC.lib  ts4100-environ-station-DC.pro  ts4100-environ-station-DC.sch
kicad_pcb/ts4100-environ-station-DC.pretty/: Amphenol_SFV20R-1STE1HLF_1x20-1MP_P0.50mm_Horizontal.kicad_mod  DFN-8_3x5_P1.25mm.kicad_mod  DFN-8_3x5_P1.25mm_HandSolder.kicad_mod  Hirose_DF13-2P-1.25H(75)_1x02_1MP_P1.25mm_Horizontal.kicad_mod  ssfv20r_1stlf.stp
scripts/: Makefile.am  env-collect.sh
src/spi-lcd/cairo-display-text/: .gitignore  Makefile.am  main.c
src/spi-lcd/lcd-helper/: spi-lcd.c
src/zpu/: Makefile.am  zpu_pir_bklt.c
